# darknet_ros

darknet_ros/: CMakeLists.txt
darknet_ros/config/: ros.yaml
darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp
darknet_ros/launch/: yolo_v3.launch  yolo_v3_tiny.launch
darknet_ros/src/: YoloObjectDetector.cpp  yolo_object_detector_node.cpp
darknet_ros/test/: object_detection.test
